--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,1 +1,10 @@
-<p>not-found works!</p>
+<div class="not-found">
+  <div class="container">
+    <div class="not-found__inner">
+      <p class="not-found__message">404 Not Found.</p>
+      <div class="not-found__actions">
+        <a routerLink="/" mat-raised-button color="primary">TOPへ戻る</a>
+      </div>
+    </div>
+  </div>
+</div>
