(prototype) loginScreen Fixes #5

--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,1 +1,15 @@
-<p>login works!</p>
+<div class="login">
+  <div class="container">
+    <div class="login__inner">
+      <div class="login__messages">
+        <p>この度は、サプライズに賛同いただき、ありがとうございます！！</p>
+        <p>ログインして、バースデーメッセージをご入力ください。</p>
+      </div>
+      <div class="login__actions">
+        <button mat-raised-button color="primary">
+          Googleアカウントでログインする
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
