--- a/src/app/user-shell/user-header/user-header.component.html
+++ b/src/app/user-shell/user-header/user-header.component.html
@@ -1,5 +1,30 @@
-<header class="header">
+<mat-toolbar class="header">
   <h1 class="header__logo">
     <a routerLink="/">LOGO</a>
   </h1>
-</header>
+  <a
+    routerLink="/message-list"
+    mat-button
+    class="example-icon"
+    aria-label="メッセージ一覧を見る"
+  >
+    メッセージ一覧を見る
+  </a>
+  <button
+    mat-mini-fab
+    color="primary"
+    [matMenuTriggerFor]="userMenu"
+    [style.background-image]="'url(https://placehold.jp/40x40.png)'"
+    class="header__icon"
+  ></button>
+  <mat-menu #userMenu="matMenu" class="header__menu">
+    <a mat-menu-item routerLink="/settings">
+      <mat-icon>account_circle</mat-icon>
+      <span>マイページ</span>
+    </a>
+    <button mat-menu-item>
+      <mat-icon>exit_to_app</mat-icon>
+      <span>ログアウト</span>
+    </button>
+  </mat-menu>
+</mat-toolbar>
