--- a/src/app/user-shell/user-header/user-header.component.scss
+++ b/src/app/user-shell/user-header/user-header.component.scss
@@ -7,14 +7,15 @@
 }
 
 .header {
-  box-sizing: border-box;
   display: flex;
   align-items: center;
-  padding: 0 16px;
-  min-height: 48px;
   display: flex;
   &__logo {
     font-size: 16px;
     margin-right: auto;
+  }
+  &__icon {
+    margin-left: 8px;
+    box-shadow: none;
   }
 }
