--- a/src/app/user-shell/user-shell/user-shell.component.html
+++ b/src/app/user-shell/user-shell/user-shell.component.html
@@ -1,3 +1,7 @@
 <app-user-header></app-user-header>
-<router-outlet></router-outlet>
-<app-user-footer></app-user-footer>
+<div class="wrap">
+  <main class="main">
+    <router-outlet></router-outlet>
+  </main>
+  <app-user-footer></app-user-footer>
+</div>
