--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,6 +30,26 @@ a {
   }
 }
 
+button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  padding: 0;
+  appearance: none;
+}
+
+mat-form-field {
+  width: 100%;
+}
+
+.mat-card-header .mat-card-title {
+  margin: 0 !important;
+}
+.mat-card-header-text {
+  margin: 0 !important;
+}
+
 .container {
   box-sizing: border-box;
   width: 100%;
