--- a/src/app/main-shell/main-shell/main-shell.component.html
+++ b/src/app/main-shell/main-shell/main-shell.component.html
@@ -1,3 +1,7 @@
 <app-main-header></app-main-header>
-<router-outlet></router-outlet>
-<app-main-footer></app-main-footer>
+<div class="wrap">
+  <main class="main">
+    <router-outlet></router-outlet>
+  </main>
+  <app-main-footer></app-main-footer>
+</div>
