--- a/src/app/main-shell/message-list/message-list/message-list.component.html
+++ b/src/app/main-shell/message-list/message-list/message-list.component.html
@@ -1,1 +1,10 @@
-<p>message-list works!</p>
+<div class="message-list">
+  <div class="container">
+    <div class="message-list__inner">
+      <app-message-card
+        *ngFor="let user of users"
+        [user]="user"
+      ></app-message-card>
+    </div>
+  </div>
+</div>
