--- a/src/app/main-shell/main-header/main-header.component.html
+++ b/src/app/main-shell/main-header/main-header.component.html
@@ -2,4 +2,7 @@
   <h1 class="header__logo">
     <a routerLink="/">LOGO</a>
   </h1>
+  <div class="header__actions">
+    <a href="/message-list" class="header__link">メッセージ一覧をみる</a>
+  </div>
 </header>
