--- a/src/app/main-shell/main-header/main-header.component.scss
+++ b/src/app/main-shell/main-header/main-header.component.scss
@@ -17,4 +17,10 @@
     font-size: 16px;
     margin-right: auto;
   }
+  &__icon {
+    margin-left: 8px;
+    box-shadow: none;
+    background-color: #ccc;
+    background: center / cover;
+  }
 }
