--- a/src/app/user-shell/settings/settings/settings.component.scss
+++ b/src/app/user-shell/settings/settings/settings.component.scss
@@ -20,6 +20,12 @@ mat-form-field {
   }
   &__info {
     margin-top: 24px;
+    padding: 16px 0;
+    text-align: center;
+    background-color: #eee;
+  }
+  &__toggle {
+    margin-top: 24px;
     text-align: center;
   }
   &__actions {
