(UserService) deleteUser Fixes #14

--- a/src/app/user-shell/settings/settings/settings.component.html
+++ b/src/app/user-shell/settings/settings/settings.component.html
@@ -148,6 +148,13 @@
           </mat-card-actions>
         </form>
       </mat-card>
+      <div class="settings__footer">
+        <p>
+          アカウント削除をご希望の方は、<span (click)="openDeleteUserDialog()"
+            >こちら</span
+          >
+        </p>
+      </div>
     </div>
   </div>
 </div>
