--- a/src/app/user-shell/settings/settings/settings.component.scss
+++ b/src/app/user-shell/settings/settings/settings.component.scss
@@ -1,3 +1,5 @@
+@import '~@angular/material/theming';
+
 .mat-card {
   padding: 24px 16px;
 }
@@ -30,5 +32,14 @@ mat-form-field {
   }
   &__actions {
     text-align: center;
+  }
+  &__footer {
+    margin-top: 60px;
+    color: map-get($mat-grey, 600);
+    text-align: center;
+    span {
+      cursor: pointer;
+      text-decoration: underline;
+    }
   }
 }
