feat(settings): cropper設置

--- a/src/app/user-shell/settings/settings/settings.component.html
+++ b/src/app/user-shell/settings/settings/settings.component.html
@@ -71,7 +71,14 @@
             </mat-form-field>
 
             <div class="settings__info">
-              <p>アイコン画像の変更機能を実装してください。</p>
+              <div class="settings__cropper">
+                <deer-crop-trigger
+                  [options]="{
+                    aspectRatio: 1 / 1
+                  }"
+                  (image)="onCroppedImage($event)"
+                ></deer-crop-trigger>
+              </div>
             </div>
 
             <mat-form-field appearance="fill">
