--- a/src/app/user-shell/settings/settings/settings.component.scss
+++ b/src/app/user-shell/settings/settings/settings.component.scss
@@ -26,6 +26,10 @@ mat-form-field {
     text-align: center;
     background-color: #eee;
   }
+  &__cropper {
+    width: 232px;
+    display: inline-block;
+  }
   &__toggle {
     margin-top: 24px;
     text-align: center;
