--- a/src/app/main-shell/home/home/home.component.html
+++ b/src/app/main-shell/home/home/home.component.html
@@ -3,7 +3,10 @@
     <div class="home__inner">
       <h1 class="home__title">Happy Birthday 🥳</h1>
       <div class="home__list">
-        <app-user-card *ngFor="let user of users" [user]="user"></app-user-card>
+        <app-user-card
+          *ngFor="let user of users$ | async"
+          [user]="user"
+        ></app-user-card>
       </div>
       <div class="home__dev">
         <p>
