--- a/src/app/main-shell/message-list/message-list/message-list.component.html
+++ b/src/app/main-shell/message-list/message-list/message-list.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="message-list__inner">
       <app-message-card
-        *ngFor="let user of users"
+        *ngFor="let user of users$ | async"
         [user]="user"
       ></app-message-card>
     </div>
