--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,3 +2,15 @@ $color-main: #77af9c;
 $color-main-light: #8cd790;
 $color-base: #e2f3ce;
 $color-font: #212121;
+
+// 管理画面UI用カラー設定
+// TODO:こちらのカラーはサービスカラーが決まり次第、調整します。
+$color-gradient-admin-start: #2cd8d5;
+$color-gradient-admin-middle: #6b8dd6;
+$color-gradient-admin-end: #8e37d7;
+$gradient-admin-main: linear-gradient(
+  -225deg,
+  $color-gradient-admin-start 0%,
+  $color-gradient-admin-middle 48%,
+  $color-gradient-admin-end 100%
+);
