(design) notFoundScreen Fixes #21

--- a/src/app/login/login/login.component.scss
+++ b/src/app/login/login/login.component.scss
@@ -38,7 +38,7 @@
     background-image: $gradient-admin-main;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-family: 'Kaushan Script', cursive;
+    font-family: $font-admin-en;
     font-size: 40px;
     text-align: center;
   }
