--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -2,8 +2,9 @@
   <div class="container">
     <div class="not-found__inner">
       <p class="not-found__message">404 Not Found.</p>
+      <p class="not-found__text">お探しのページは見つかりませんでした。</p>
       <div class="not-found__actions">
-        <a routerLink="/" mat-raised-button color="primary">TOPへ戻る</a>
+        <a routerLink="/" class="btn-admin"><span>トップページへ戻る</span></a>
       </div>
     </div>
   </div>
