(design) messageListScreen Fixes #18

--- a/src/app/user-shell/message-list/message-list/message-list.component.scss
+++ b/src/app/user-shell/message-list/message-list/message-list.component.scss
@@ -2,7 +2,10 @@
 @import 'mixins';
 
 .message-list {
-  padding: 60px 0;
+  padding: 40px 0;
+  @include sp {
+    padding: 30px 0;
+  }
   &__inner {
     display: grid;
     grid-gap: 16px;
