--- a/src/app/user-shell/user-footer/user-footer.component.html
+++ b/src/app/user-shell/user-footer/user-footer.component.html
@@ -1,3 +1,8 @@
 <footer class="footer">
-  <div class="footer__copy">&copy; Team Camp.</div>
+  <div class="footer__inner">
+    <div class="footer__login" *ngIf="!(authService.user$ | async)">
+      メッセージ登録は<a routerLink="/login">こちら</a>
+    </div>
+    <div class="footer__copy">&copy; Team Camp.</div>
+  </div>
 </footer>
