--- a/src/app/user-shell/user-header/user-header.component.html
+++ b/src/app/user-shell/user-header/user-header.component.html
@@ -8,7 +8,7 @@
     class="example-icon"
     aria-label="メッセージ一覧を見る"
   >
-    メッセージ一覧を見る
+    メッセージ一覧へ
   </a>
   <ng-container *ngIf="authService.user$ | async as user">
     <button
