--- a/src/app/user-shell/user-header/user-header.component.scss
+++ b/src/app/user-shell/user-header/user-header.component.scss
@@ -1,3 +1,6 @@
+@import 'variables';
+@import 'mixins';
+
 :host {
   position: fixed;
   top: 0;
@@ -6,13 +9,18 @@
   z-index: 1000;
 }
 
+.mat-toolbar {
+  background-color: rgba(255, 255, 255, 0.95);
+}
+
 .header {
   display: flex;
   align-items: center;
   display: flex;
   &__logo {
-    font-size: 16px;
+    font-size: 24px;
     margin-right: auto;
+    font-family: $font-admin-en;
   }
   &__icon {
     margin-left: 8px;
