--- a/src/app/user-shell/user-shell/user-shell.component.scss
+++ b/src/app/user-shell/user-shell/user-shell.component.scss
@@ -1,6 +1,10 @@
+@import 'variables';
+@import 'mixins';
+
 :host {
   display: block;
-  height: 100%;
+  min-height: 100%;
+  background: $gradient-admin-main;
 }
 
 .wrap {
