--- a/src/app/user-shell/settings/settings/settings.component.html
+++ b/src/app/user-shell/settings/settings/settings.component.html
@@ -123,7 +123,7 @@
                 matInput
                 [matDatepicker]="picker2"
                 autocomplete="off"
-                formControlName="leavedDated"
+                formControlName="leavedDate"
               />
               <mat-datepicker-toggle
                 matSuffix
