--- a/src/app/user-shell/message-list/message-card/message-card.component.scss
+++ b/src/app/user-shell/message-list/message-card/message-card.component.scss
@@ -8,7 +8,7 @@
   height: 100%;
   padding: 24px;
   border-radius: 8px;
-  box-shadow: 0 2.5rem 2rem -2rem hsl(200 50% 20% / 40%);
+  box-shadow: $box-shadow-admin;
   display: flex;
   flex-direction: column;
   @include sp {
