--- a/src/app/user-shell/settings/settings/settings.component.html
+++ b/src/app/user-shell/settings/settings/settings.component.html
@@ -1,12 +1,10 @@
 <div class="settings">
   <div class="container">
     <div class="settings__inner">
-      <mat-card>
-        <mat-card-header>
-          <mat-card-title>メッセージ登録・編集</mat-card-title>
-        </mat-card-header>
+      <div class="settings__box">
+        <h1 class="settings__title">メッセージ登録・編集</h1>
         <form [formGroup]="form" (ngSubmit)="updateUser()">
-          <mat-card-content class="settings__content">
+          <div class="settings__content">
             <mat-form-field appearance="fill">
               <mat-label>メッセージタイトル</mat-label>
               <input
@@ -70,7 +68,8 @@
               </mat-error>
             </mat-form-field>
 
-            <div class="settings__info">
+            <div class="settings__avatar">
+              <div class="settings__avatar-label">アイコン画像</div>
               <div class="settings__cropper">
                 <deer-crop-trigger
                   [options]="{
@@ -106,9 +105,7 @@
                 [for]="picker1"
               ></mat-datepicker-toggle>
               <mat-datepicker #picker1></mat-datepicker>
-              <mat-hint
-                >入会日順に並びます。年月が正しければ、日付についてはおよそでもOKです！</mat-hint
-              >
+              <mat-hint>入会日順に並びます。</mat-hint>
               <mat-error *ngIf="form.get('joinedDate').hasError('required')">
                 必須入力です。
               </mat-error>
@@ -130,9 +127,6 @@
                 [for]="picker2"
               ></mat-datepicker-toggle>
               <mat-datepicker #picker2></mat-datepicker>
-              <mat-hint
-                >年月が正しければ、日付についてはおよそでもOKです！</mat-hint
-              >
             </mat-form-field>
 
             <div class="settings__toggle">
@@ -140,25 +134,22 @@
                 >公開</mat-slide-toggle
               >
             </div>
-          </mat-card-content>
-          <mat-card-actions class="settings__actions">
+          </div>
+          <div class="settings__actions">
             <button
-              mat-raised-button
-              color="primary"
+              class="btn-admin"
               [disabled]="form.invalid || form.pristine || processing"
             >
-              {{
-                form.get('isPublic').value
-                  ? 'メッセージを公開する'
-                  : '下書きを保存する'
-              }}
+              <span>{{
+                toggleBtnText(form.get('isPublic').value, form.pristine)
+              }}</span>
             </button>
-          </mat-card-actions>
+          </div>
         </form>
-      </mat-card>
+      </div>
       <div class="settings__footer">
         <p>
-          アカウント削除をご希望の方は、<span (click)="openDeleteUserDialog()"
+          アカウント削除をご希望の方は<span (click)="openDeleteUserDialog()"
             >こちら</span
           >
         </p>
