--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -16,4 +16,5 @@ $gradient-admin-main: linear-gradient(
   $color-gradient-admin-end 100%
 );
 
+$box-shadow-admin: 0 2.5rem 2rem -2rem hsl(200 50% 20% / 40%);
 $font-admin-en: 'Kaushan Script', cursive;
