--- a/src/app/login/login/login.component.scss
+++ b/src/app/login/login/login.component.scss
@@ -4,17 +4,24 @@
 
 :host {
   display: block;
-  height: 100%;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   background-image: $gradient-admin-main;
 }
 
 .login {
   height: 100%;
+  overflow-y: auto;
   .container {
     height: 100%;
   }
   &__inner {
-    height: 100%;
+    box-sizing: border-box;
+    min-height: 100%;
+    padding: 32px 0;
     display: flex;
     align-items: center;
     justify-content: center;
