--- a/src/app/main-shell/pre/pre.component.scss
+++ b/src/app/main-shell/pre/pre.component.scss
@@ -15,11 +15,14 @@
 
 .pre {
   height: 100%;
+  overflow-y: auto;
   .container {
     height: 100%;
   }
   &__inner {
-    height: 100%;
+    box-sizing: border-box;
+    min-height: 100%;
+    padding: 32px 0;
     display: flex;
     align-items: center;
     justify-content: center;
