--- a/src/app/user-shell/user-header/user-header.component.html
+++ b/src/app/user-shell/user-header/user-header.component.html
@@ -19,8 +19,8 @@
     ></button>
     <mat-menu #userMenu="matMenu" class="header__menu">
       <a mat-menu-item routerLink="/settings">
-        <mat-icon>settings</mat-icon>
-        <span>設定</span>
+        <mat-icon>edit</mat-icon>
+        <span>編集</span>
       </a>
       <button mat-menu-item (click)="authService.logout()">
         <mat-icon>exit_to_app</mat-icon>
