--- a/src/app/main-shell/main-header/main-header.component.scss
+++ b/src/app/main-shell/main-header/main-header.component.scss
@@ -13,6 +13,8 @@
   padding: 0 16px;
   min-height: 48px;
   display: flex;
+  background: #fff;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 1px 3px 0px;
   &__logo {
     font-size: 16px;
     margin-right: auto;
