feat: footerスタイル調整

--- a/src/app/main-shell/main-footer/main-footer.component.scss
+++ b/src/app/main-shell/main-footer/main-footer.component.scss
@@ -1,7 +1,9 @@
 .footer {
   padding: 16px;
+  background: #566ca8;
   &__copy {
     text-transform: uppercase;
     text-align: center;
+    color: #fff;
   }
 }
