--- a/src/app/main-shell/home/time-line/time-line.component.scss
+++ b/src/app/main-shell/home/time-line/time-line.component.scss
@@ -1,6 +1,5 @@
 .time-line {
   width: 100%;
-  height: 100vh;
   background-image: linear-gradient(
     -45deg,
     #566ca8 25%,
@@ -13,5 +12,15 @@
   );
   background-size: 40px 40px;
   background-attachment: fixed;
-  opacity: 0.5;
+}
+
+mgl-timeline-entry-dot {
+  background: center/cover no-repeat;
+}
+
+mgl-timeline-entry-side {
+  background: #fafafa;
+  border-radius: 6px;
+  color: #424242;
+  padding: 16px;
 }
