refactor: スタイル修正

--- a/src/app/main-shell/home/home/home.component.scss
+++ b/src/app/main-shell/home/home/home.component.scss
@@ -129,7 +129,7 @@
 .group-b {
   width: 38%;
   float: left;
-  transform: translateY(160px);
+  transform: translate(40px, 160px);
 }
 .group-c {
   width: 38%;
