(fix)メッセージテキストによるスタイル崩れ修正 Fixes #57

--- a/src/app/user-shell/message-list/message-card/message-card.component.scss
+++ b/src/app/user-shell/message-list/message-card/message-card.component.scss
@@ -25,6 +25,7 @@
     padding: 20px 0;
     color: map-get($mat-grey, 800);
     font-size: 14px;
+    text-align: justify;
   }
   &__footer {
     display: flex;
